--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
+        pip install -e .
+    - name: Set PYTHONPATH
+      run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
     - name: Run tests
       run: |
         pytest
